--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
     "name": "jsoneditor",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "private": false,
     "repository": {
         "url": "https://github.com/Innometrics/jsoneditor"
     },
     "scripts": {
-        "build": "gulp build"
+        "build": "gulp build",
+        "upload": "gulp upload"
     },
     "dependencies": {
         "gulp": "*",
         "gulp-uglify": "*",
         "gulp-rename": "*",
-        "gulp-ver": "*"
+        "gulp-ver": "*",
+        "async": "*",
+        "aws-sdk": "*"
     }
 }
